Shruthi, Luka | Fixing alignment issue with advice box in treatment advice form

--- a/tama.web/src/main/webapp/styles/standard.css
+++ b/tama.web/src/main/webapp/styles/standard.css
@@ -462,6 +462,7 @@ fieldset th {
 
 .tundra .dijitTextArea{
     padding-right:2px;
+    width:99em;
 }
 
 #_c_org_motechproject_tama_domain_TreatmentAdvice_drugName1_id {
